fixing flex wrap

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,7 +37,8 @@ body {
   flex: 1;
   display: flex;
   flex-direction: row;
-  flex-flow: wrap center;
+  justify-content: center;
+  flex-wrap: wrap;
   width: 40%;
   @media (max-width: 700px) {
     width: 90%;
@@ -45,6 +46,9 @@ body {
   .icon {
     text-align: center;
     flex: 1;
+    @media (max-width: 700px) {
+      flex: 1 0 25%;
+    }
     background-color: transparent;
     transition: all 0.2s;
     margin: 0 5px;
